2018-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el: Tidy up source code so as to be within 80-column.

2018-02-16  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el: Reformat docstrings for proper opening summary
	sentence ([emacs-w3m:12912]).

2018-02-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-fb.el (w3m-fb-mode, w3m-fb-delete-frame-kill-buffers):
	Use delete-frame-functions.
	(w3m-fb-delete-frame-functions): Remove.

	* w3m-util.el (w3m-delete-frames-and-windows): Bind
	delete-frame-functions so as not to run w3m-fb-delete-frame-buffers.
	(w3m-delete-w3m-initial-frames): Remove obsolete delete-frame-hook.

2018-02-15  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el: Add commentary, correct grammar of prompts..
	(w3m-session-group-open): New variable
	(w3m-session-select-quit): Quitting a session-group display returns to
	its parent session list display.
	(w3m-session-select-open-session-group, w3m-session-select-rename)
	(w3m-session-select-delete): Stay on proper line when within
	session-group display, after renaming or deleting an entry. This
	required adding an optional arg to the function.
	(w3m-session-rename): Allow renaming individual tabs of a session.
	(w3m-session-delete): Allow deleting individual tabs of a session.
	[emacs-w3m:12907]

2018-02-14  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-external-view): Fix regex for url's that contain uri
	'query' and or 'fragment' components ([emacs-w3m:12901]).

2018-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-string-match-url-components)
	(w3m-string-match-url-components-1, w3m-url-strip-fragment):
	Don't recognize a url fragment "#/foo" as a name attribution.

2018-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-gnome-bugzilla):
	Limit to <pre class="bz_comment_text">.  Thanks to Kevin Ryde
	([emacs-w3m:12890]).

2018-01-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-gnome-bugzilla): New ([emacs-w3m:12885]).
